k8s-specifications/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    mesh: voting-app
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
