k8s-specifications/debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
  namespace: vote
spec:
  selector:
    matchLabels:
      app: debug
  replicas: 1
  template:
    metadata:
      labels:
        app: debug
    spec:
      containers:
      - image: 111706684826.dkr.ecr.us-east-1.amazonaws.com/library/debug:latest
        name: debug
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
