k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vote
spec:
  selector:
    matchLabels:
      app: worker
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: CONTAINER_IMAGE
        name: worker
