k8s-specifications/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vote
spec:
  selector:
    matchLabels:
      app: worker
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
        version: v1
    spec:
      containers:
      - image: CONTAINER_IMAGE
      # - image: 111706684826.dkr.ecr.us-east-1.amazonaws.com/demo/worker:dbe52df13516ab398d212f8edb1d6bb2e35f7109
        name: worker
