k8s-specifications/mesh-gw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-gw
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-gw
  template:
    metadata:
      labels:
        app: vote-gw
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-east-1.amazonaws.com/aws-appmesh-envoy:v1.15.1.0-prod
          ports:
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: vote-gw
  namespace: vote
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 8443
      name: https
  selector:
    app: vote-gw
