k8s-specifications/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-v1
  namespace: vote
spec:
  selector:
    matchLabels:
      app: result
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: result
        version: v1
    spec:
      containers:
      - image: CONTAINER_IMAGE
      # - image: 111706684826.dkr.ecr.us-east-1.amazonaws.com/demo/result:c5c574a326911170996724cae3c91d7a4d492e0a
        name: result
---
apiVersion: v1
kind: Service
metadata:
  name: result-v1
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "result-service"
    port: 80
    targetPort: 80
  selector:
    app: result
    version: v1
