k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-v1
  namespace: vote
spec:
  selector:
    matchLabels:
      app: vote-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: vote-v1
    spec:
      containers:
      - image: CONTAINER_IMAGE
        name: vote-v1
---
apiVersion: v1
kind: Service
metadata:
  name: vote-v1
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "vote-service"
    port: 5000
    targetPort: 80
    nodePort: 31000
  selector:
    app: vote-v1
