k8s-specifications/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: vote
spec:
  selector:
    matchLabels:
      app: db
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        version: v1
    spec:
      containers:
      - image: postgres:9.4
        name: db
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
    version: v1
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: db
  namespace: vote
spec:
  awsName: db.vote.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: db-router
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: vote
  labels:
    app: db
spec:
  ports:
  - port: 5432
    name: tcp
