k8s-specifications/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: vote
spec:
  selector:
    matchLabels:
      app: redis
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
      - image: redis:alpine
        name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    version: v1
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: redis
  namespace: vote
spec:
  awsName: redis.vote.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: redis-router
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: tcp
