k8s-specifications/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-v1
  namespace: vote
spec:
  selector:
    matchLabels:
      app: vote
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: vote
        version: v1
    spec:
      containers:
      - image: CONTAINER_IMAGE
      # - image: 111706684826.dkr.ecr.us-east-1.amazonaws.com/demo/vote:dbe52df13516ab398d212f8edb1d6bb2e35f7109
        name: vote
---
apiVersion: v1
kind: Service
metadata:
  name: vote-v1
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: vote
    version: v1
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: vote
  namespace: vote
spec:
  awsName: vote.vote.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: vote-router
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: vote
  labels:
    app: vote
spec:
  ports:
  - port: 80
    name: http
